updated page to show name

--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to Instance <%= info.uniqueName %></h1>
+            <h1>Welcome to Instance</h1> <%= info.uniqueName %>
           </hgroup>
 
                 <h2>Request information</h2>
