--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to Instance</h1> <%= dbInfo.uniqueName %>
+            <h1>Welcome to Instance <%= dbInfo.uniqueName %></h1> 
           </hgroup>
 
                 <h2>Request information</h2>
