--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to Instance <%= nameInfo.uniqueName %></h1> 
+            <h1>Welcome to Instance <%= uniqueName %></h1> 
           </hgroup>
 
                 <h2>Request information</h2>
